--- a/note-queue-consumer/pom.xml
+++ b/note-queue-consumer/pom.xml
@@ -34,6 +34,10 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
