--- a/note-service.properties
+++ b/note-service.properties
@@ -1,3 +1,8 @@
+spring.datasource.url: jdbc:mysql://localhost:3306/note?useSSL=false
+spring.datasource.username: root
+spring.datasource.password: rootroot
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+
 # this is the port on which our note-service will run
 server.port=1984
 
