--- a/note-service.properties
+++ b/note-service.properties
@@ -1,6 +1,6 @@
 spring.datasource.url: jdbc:mysql://localhost:3306/note?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username: root
-spring.datasource.password: password
+spring.datasource.password: rootroot
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
 # this is the port on which our note-service will run
